<resources>
    <string name="app_name">Project Prototype</string>
    <string name="title_activity_main_nav">MainNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Play Music</string>
    <string name="menu_gallery">Role Management</string>
    <string name="menu_slideshow">Kick/Ban Users</string>
    <string name="menu_pool">Create Poll</string>
    <string name="menu_results">Poll Results</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
