<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_pool"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_pool" />
        <item
            android:id="@+id/nav_results"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_results" />
    </group>
</menu>
